--- a/adversarial_image_classification/pyproject.toml
+++ b/adversarial_image_classification/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "requests>=2.32.4",
     "torch>=2.7.1",
     "torchvision>=0.22.1",
 ]
