--- a/log_files/pyproject.toml
+++ b/log_files/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.116.1",
     "pydantic>=2.11.7",
     "pytz>=2025.2",
 ]
