--- a/rendering/rendering-app/package.json
+++ b/rendering/rendering-app/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.22",
+    "@ai-sdk/openai": "^3.0.26",
+    "@ai-sdk/react": "^3.0.79",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.182.0",
+    "ai": "^6.0.77",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "three": "^0.182.0"
